<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    >
    <TextView
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:textStyle="italic"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="55dp"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:id="@+id/tableLayout">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:text="@string/column_header1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:text="@string/column_header2"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tableBg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                android:text="@string/fajr"
                />
            <TextView
                android:id="@+id/fajr_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tableBg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                android:text="@string/sunrise"
                />
            <TextView
                android:id="@+id/sunrise1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tableBg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                android:text="@string/zuhr"
                />
            <TextView
                android:id="@+id/zuhr_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tableBg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                android:text="@string/asr"
                />
            <TextView
                android:id="@+id/asr_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tableBg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                android:text="@string/magrhib"
                />
            <TextView
                android:id="@+id/magrhib_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tableBg"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                android:text="@string/isha"
                />
            <TextView
                android:id="@+id/isha_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/tableText"
                />
        </TableRow>
    </TableLayout>
    <!--<TextView-->
    <!--android:id="@+id/date_time"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/tableLayout"-->
    <!--android:textColor="@color/textColor"-->
    <!--android:textSize="20sp"-->
    <!--/>-->

    <TableLayout
        android:id="@+id/button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:stretchColumns="*"
        android:background="@color/colorPrimary"
        >

        <TableRow>

            <Button
                android:id="@+id/home"
                android:layout_width="45dp"
                android:layout_height="40dp"
                style="@style/button_text"
                android:background="@drawable/custom_button2"
                android:text="@string/crrnt"
                />
            <Button
                android:id="@+id/calendar"
                android:layout_width="15dp"
                android:layout_height="40dp"
                style="@style/button_text"
                android:background="@drawable/custom_button2"
                android:text="@string/cal"
                />
            <Button
                android:id="@+id/about_us"
                android:layout_width="8dp"
                android:layout_height="40dp"
                style="@style/button_text"
                android:background="@drawable/custom_button2"
                android:text="Masjids"
                />
            <Button
                android:id="@+id/info"
                android:layout_width="8dp"
                android:layout_height="40dp"
                style="@style/button_text"
                android:background="@drawable/custom_button2"
                android:text="Duas"
                />
        </TableRow>
    </TableLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
