<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    >
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


    <!--<TextView-->
        <!--android:id="@+id/date_time"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/tableLayout"-->
        <!--android:textColor="@color/textColor"-->
        <!--android:textSize="20sp"-->
        <!--/>-->

    <TableLayout
        android:id="@+id/button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:stretchColumns="*"
        android:background="@color/colorPrimary"
        >

        <TableRow>

            <Button
                android:id="@+id/home"
                android:layout_width="45dp"
                android:layout_height="40dp"
                style="@style/button_text"
                android:background="@drawable/custom_button2"
                android:text="@string/crrnt"
                />
            <Button
                android:id="@+id/calendar"
                android:layout_width="15dp"
                android:layout_height="40dp"
                style="@style/button_text"
                android:background="@drawable/custom_button2"
                android:text="@string/cal"
                />
            <Button
                android:id="@+id/about_us"
                android:layout_width="8dp"
                android:layout_height="40dp"
                style="@style/button_text"
                android:background="@drawable/custom_button2"
                android:text="Masjids"
                />
            <Button
                android:id="@+id/info"
                android:layout_width="8dp"
                android:layout_height="40dp"
                style="@style/button_text"
                android:background="@drawable/custom_button2"
                android:text="Duas"
                />
        </TableRow>

    </TableLayout>

    <android.support.v4.view.ViewPager android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_table"
        />

</RelativeLayout>
